css/responsive.css
@media (max-width: 1200px) {
	body div.inner {
		width: 100%;
	}
	
	body,
	body span.section-header, 
	body a.toc-item,
	header {
		font-size: 2rem;
	}
	
	section#contact div#icons a {
		width: 7.5rem;
		height: 7.5rem;
		padding: 1.8rem;
	}
	
}

@media (max-width: 750px) {
	body,
	body span.section-header, 
	body a.toc-item,
	header {
		font-size: 1.7rem;
	}
	
	div#welcome {
		width: 100%;
	}
	
	section#projects-experience div.inner a {
		flex: 0 0 100%;
		margin-right: 0;
	}
	
	section#contact div#icons a {
		width: 6.5rem;
		height: 6.5rem;
		padding: 1.5rem;
	}
	
	/* Show circles */
	section#projects-experience div.inner div > span:before {
		transform: scale(1);
		background-color: #F9C776;
	}
	
	section#contact div#icons a,
	section#contact div#icons a {
		transform: scale(1);
		background-color: #2854A7;
	}
	
	section#contact div#icons a svg.logo-path,
	section#contact div#icons a svg.logo-path {
		fill: #ffffff;
	}
}

@media (max-width: 600px) {
}

